--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,12 @@
 
 .container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 .map {
+    display: flex;
+    flex-wrap: wrap;
     width: 400px;
     height: 400px;
     border: 1px solid black;
