--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@
     grid-template-rows: 100px 100px;
     grid-auto-rows: 100px;
     gap: 20px;
+    grid-template-areas: 
+    "box4 box4 box4"
+    "box2 . box3"
+    "box1 box1 box1"
+    
 }
 
 .map > div {
@@ -19,21 +24,25 @@
 }
 
 .box1 {
-    grid-column: 1 / 4;
-    grid-row: 3;
+    /* grid-column: 1 / 4;
+    grid-row: 3; */
+    grid-area: box1;
 }
 
 .box2 {
-    grid-column: 1;
+    /* grid-column: 1; */
+    grid-area: box2;
 }
 
 .box3 {
-    grid-column: 3;
+    /* grid-column: 3; */
+    grid-area: box3;
 }
 
 .box4 {
-    grid-column: 1 / 4 ;
-    grid-row: 1;
+    /* grid-column: 1 / 4 ;
+    grid-row: 1; */
+    grid-area: box4;
 }
  
 .ui {
